NProjects/NVisionInspect/vision/NVisionInspectProcessor/header/NVisionInspectProcessorCSharp.h

	__declspec(dllexport) bool                          SelectROI(CNVisionInspectProcessor* pProcessor, int nCamIdx, int nROIIdx, int nFrom, int nROIX, int nROIY, int nROIWidth, int nROIHeight);
	__declspec(dllexport) void                          CallInspectTool(CNVisionInspectProcessor* pProcessor, emInspectTool inspTool);
	__declspec(dllexport) bool                          HSVTrain(CNVisionInspectProcessor* pProcessor, int nCamIdx, int nFrame, CNVisionInspectRecipe_HSV* pRecipeHSV);
	/************************** Load Setting and Recipe **************************/

	__declspec(dllexport) bool                          LoadSystemSettings(CNVisionInspectProcessor* pProcessor, CNVisionInspectSystemSetting* pSysSetting);
	__declspec(dllexport) bool                          LoadCameraSettings(CNVisionInspectProcessor* pProcessor, CNVisionInspectCameraSetting* pCamSetting, int nCamIdx);
	__declspec(dllexport) bool                          LoadFakeCameraSettings(CNVisionInspectProcessor* pProcessor, CNVisionInspect_FakeCameraSetting* pFakeCamSetting);
												        
	__declspec(dllexport) bool                          LoadRecipe(CNVisionInspectProcessor* pProcessor, int nCamCount, CNVisionInspectRecipe* pRecipe);
	__declspec(dllexport) bool                          LoadRecipe_FakeCam(CNVisionInspectProcessor* pProcessor, CNVisionInspectRecipe_FakeCam* pFakeCamRecipe);
	/************************** Save Setting and Recipe **************************/

	__declspec(dllexport) bool                          SaveSystemSetting(CNVisionInspectProcessor* pProcessor, CNVisionInspectSystemSetting* pSysSetting);
	__declspec(dllexport) bool                          SaveCameraSetting(CNVisionInspectProcessor* pProcessor, int nCamIdx, CNVisionInspectCameraSetting* pCamSetting);
	__declspec(dllexport) bool                          SaveFakeCameraSetting(CNVisionInspectProcessor* pProcessor, CNVisionInspect_FakeCameraSetting* pFakeCamSetting);
												        
	__declspec(dllexport) bool                          SaveRecipe(CNVisionInspectProcessor* pProcessor, int nCamIdx, CNVisionInspectRecipe* pRecipe);