NProjects/NVisionInspect/gui/NVisionInspectGUI/Manager/Class/NVisionInspectProcessorDll.cs


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SelectROI(IntPtr NVisionInspectProcessor, int nCamIdx, int nROIIdx, int nFrom, int nROIX, int nROIY, int nROIWidth, int nROIHeight);
        public bool SelectROI(int nCamIdx, int nROIIdx, int nFrom, int nROIX, int nROIY, int nROIWidth, int nROIHeight) { return SelectROI(m_NVisionInspectProcessor, nCamIdx, nROIIdx, nFrom, nROIX, nROIY, nROIWidth, nROIHeight); }
        /**********************************
       - Select ROI
       - Parameter : Instance Pointer, Camera Index, ROI Index, From Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool CallInspectTool(IntPtr NVisionInspectProcessor, int nInspTool);
        public void CallInspectTool(int nInspTool) { CallInspectTool(m_NVisionInspectProcessor, nInspTool); }
        /**********************************
       - Call Inspect Tool
       - Parameter : Instance Pointer, Inspect Tool Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool HSVTrain(IntPtr NVisionInspectProcessor, int nCamIdx, int nFrame, IntPtr pRecipeHSV);
        public bool HSVTrain(int nCamIdx, int nFrame, CNVisionInspectRecipe_HSV recipeHSV)
        {
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(recipeHSV));
            Marshal.StructureToPtr(recipeHSV, pPointer, false);

            bool bRet = HSVTrain(m_NVisionInspectProcessor, nCamIdx, nFrame, pPointer);

            return bRet;
        }
        #endregion

        #region Load Setting and Recipe
#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadSystemSettings(IntPtr NVisionInspectProcessor, IntPtr pSysSetting);
        public bool LoadSystemSettings(ref CNVisionInspectSystemSetting sysSetting)
        {
            CNVisionInspectSystemSetting settings = new CNVisionInspectSystemSetting();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(settings));
            Marshal.StructureToPtr(settings, pPointer, false);
            bool bRet = LoadSystemSettings(m_NVisionInspectProcessor, pPointer);
            sysSetting = (CNVisionInspectSystemSetting)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspectSystemSetting));

            return bRet;
        }
        /**********************************
       - Load System Settings
       - Parameter : Instance Pointer, System Setting Pointer
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadCameraSettings(IntPtr NVisionInspectProcessor, IntPtr pCamSetting, int nCamIdx);
        public bool LoadCameraSettings(ref CNVisionInspectCameraSetting camSetting, int nCamIdx)
        {
            CNVisionInspectCameraSetting settings = new CNVisionInspectCameraSetting();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(settings));
            Marshal.StructureToPtr(settings, pPointer, false);
            bool bRet = LoadCameraSettings(m_NVisionInspectProcessor, pPointer, nCamIdx);
            camSetting = (CNVisionInspectCameraSetting)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspectCameraSetting));

            return bRet;
        }
        /**********************************
       - Load Camera Settings
       - Parameter : Instance Pointer, Camera Setting Pointer, Camera Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadFakeCameraSettings(IntPtr NVisionInspectProcessor, IntPtr pFakeCamSetting);
        public bool LoadFakeCameraSettings(ref CNVisionInspect_FakeCameraSetting fakeCamSetting)
        {
            CNVisionInspect_FakeCameraSetting settings = new CNVisionInspect_FakeCameraSetting();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(settings));
            Marshal.StructureToPtr(settings, pPointer, false);
            bool bRet = LoadFakeCameraSettings(m_NVisionInspectProcessor, pPointer);
            fakeCamSetting = (CNVisionInspect_FakeCameraSetting)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspect_FakeCameraSetting));

            return bRet;
        }
        /**********************************
       - Load Fake Camera Settings
       - Parameter : Instance Pointer, Fake Camera Setting Pointer
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadRecipe(IntPtr NVisionInspectProcessor, int nCamCount, IntPtr pRecipe);
        public bool LoadRecipe(int nCamCount, ref CNVisionInspectRecipe pRecipe)
        {
            CNVisionInspectRecipe recipe = new CNVisionInspectRecipe();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(recipe));
            Marshal.StructureToPtr(recipe, pPointer, false);
            bool bRet = LoadRecipe(m_NVisionInspectProcessor, nCamCount, pPointer);
            pRecipe = (CNVisionInspectRecipe)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspectRecipe));

            return bRet;
        }
        /**********************************
       - Load Recipe
       - Parameter : Instance Pointer, Camera Count, Recipe Pointer
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadRecipe_FakeCam(IntPtr NVisionInspectProcessor, IntPtr pRecipeFakeCam);
        public bool LoadRecipe_FakeCam(ref CNVisionInspectRecipe_FakeCam pRecipeFakeCam)
        {
            CNVisionInspectRecipe_FakeCam recipe = new CNVisionInspectRecipe_FakeCam();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(recipe));
            Marshal.StructureToPtr(recipe, pPointer, false);
            bool bRet = LoadRecipe_FakeCam(m_NVisionInspectProcessor, pPointer);
            pRecipeFakeCam = (CNVisionInspectRecipe_FakeCam)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspectRecipe_FakeCam));

            return bRet;
        }
        /**********************************
      - Load Recipe Fake Camera
      - Parameter : Instance Pointer, Recipe Fake Camera Pointer
       **********************************/

        #endregion

        #region Save Setting and Recipe

#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SaveSystemSetting(IntPtr NVisionInspectProcessor, IntPtr pSysSetting);
        public bool SaveSystemSetting(ref CNVisionInspectSystemSetting sysSetting)
        {
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(sysSetting));
            Marshal.StructureToPtr(sysSetting, pPointer, false);
            bool bRet = SaveSystemSetting(m_NVisionInspectProcessor, pPointer);

            return bRet;
        }
        /**********************************
      - Save System Setting
      - Parameter : Instance Pointer, System Setting Pointer
       **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SaveCameraSetting(IntPtr NVisionInspectProcessor, int nCamIdx, IntPtr pCamSetting);
        public bool SaveCameraSetting(int nCamIdx, ref CNVisionInspectCameraSetting camSetting)
        {
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(camSetting));
            Marshal.StructureToPtr(camSetting, pPointer, false);
            bool bRet = SaveCameraSetting(m_NVisionInspectProcessor, nCamIdx, pPointer);

            return bRet;
        }
        /**********************************
      - Save Camera Setting
      - Parameter : Instance Pointer, Camera Index, Camera Setting Pointer
       **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SaveFakeCameraSetting(IntPtr NVisionInspectProcessor, IntPtr pFakeCamSetting);
        public bool SaveFakeCameraSetting(ref CNVisionInspect_FakeCameraSetting fakeCamSetting)
        {
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(fakeCamSetting));
            Marshal.StructureToPtr(fakeCamSetting, pPointer, false);
            bool bRet = SaveFakeCameraSetting(m_NVisionInspectProcessor, pPointer);

            return bRet;
        }
        /**********************************
      - Save Fake Camera Setting
      - Parameter : Instance Pointer, Fake Camera Setting Pointer
       **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SaveRecipe(IntPtr NVisionInspectProcessor, int nCamIdx, IntPtr pRecipe);
        public bool SaveRecipe(int nCamIdx, ref CNVisionInspectRecipe pRecipe)
        {
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(pRecipe));
            Marshal.StructureToPtr(pRecipe, pPointer, false);
            bool bRet = SaveRecipe(m_NVisionInspectProcessor, nCamIdx, pPointer);

            return bRet;
        }
        /**********************************
      - Save Recipe
      - Parameter : Instance Pointer, Camera Index, Recipe Pointer
       **********************************/

